# mlops-autoencoder

./: README.md  pyproject.toml  pytorchのuv pipコマンド.txt
autoencoder_inference/: README.md  main.py  model.py
autoencoder_inference/config/: config.yaml
autoencoder_poc/: README.md  dataset.py  main.py
autoencoder_poc/config/: config.yaml
create_traindata/: README.md  main.py
create_traindata/conf/: config.yaml
