[project]
name = "mlopswork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.7.5",
    "mlflow>=2.17.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.14.0",
    "tqdm>=4.67.1",
    "pillow>=10.0.0",
]
